<resources>
    <string name="app_name">AdminArea_RealFood</string>
    <string name="taikhoan">Tài khoản</string>
    <string name="matkhau">Mật khẩu</string>
    <string name="link_quenmatkhau"><u>Quên mật khẩu ?</u></string>
    <string name="dangnhap">Đăng nhập</string>
    <string name="datlaimatkhau">Đặt lại mật khẩu</string>
    <string name="noidung_quenmatkhau_screen">Vui lòng nhập email của bạn để nhận được một liên kết để tạo mật khẩu mới qua email</string>
    <string name="email">Email</string>
    <string name="guiemailxacthuc">Gửi email xác thực</string>
    <string name="link_dangnhap"><u>Đăng nhập</u></string>
    <string name="danhsachcuahang">Danh sách cửa hàng</string>
    <string name="danhsachshipper">Danh sách shipper</string>
    <string name="loaisanpham">Loại sản phẩm</string>
    <string name="dtcuacuahang">Doanh thu cửa hàng</string>
    <string name="dthethong">Doanh thu hệ thống</string>
    <string name="thongke">Thống kê shipper</string>
    <string name="dskhachhang">Danh sách khách hàng</string>
    <string name="hovaten">Họ và tên</string>
    <string name="trangthai">Trạng thái</string>
    <string name="gui">Gửi</string>
    <string name="sdt">Số điện thoại</string>
    <string name="maxe">Mã xe</string>
    <string name="taikhoan1">Tài khoản :</string>
    <string name="matkhau1">Mật khẩu :</string>
    <string name="hovaten1">Họ và tên :</string>
    <string name="ngaysinh1">Ngày sinh :</string>
    <string name="masoxe">Mã số xe :</string>
    <string name="cmd">CMND :</string>
    <string name="mattruoc">Mặt trước :</string>
    <string name="matsau">Mặt sau :</string>
    <string name="tao">Tạo</string>
    <string name="sodienthoai">Số điện thoại :</string>
    <string name="id">ID :</string>
    <string name="so1">1</string>
    <string name="ten">Tên :</string>
    <string name="a">Tên sản phẩm</string>
    <string name="tenloai">Tên loại :</string>
    <string name="so">Số</string>
    <string name="xoa">Xóa</string>
    <string name="khoa">khóa</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tencuahang">Tên cửa hàng</string>
    <string name="tenchu">Tên chủ</string>
    <string name="chonthongbao">Chọn thông báo</string>
    <string name="nguoiquanli">Người quản lí :</string>
    <string name="tennguoiquanli">Tên người quản lí</string>
    <string name="diachi">Địa chỉ :</string>
    <string name="diachi1">Địa chỉ</string>
    <string name="email1">Email :</string>
    <string name="gokhoa">Gỡ khóa</string>
    <string name="kichhoat">kích hoạt</string>
    <string name="chan">Chặn</string>
    <string name="thongtincanhan">Thông tin cá nhân</string>
    <string name="sua"><u>Sửa</u></string>
    <string name="tenadmin">Tên admin</string>
    <string name="ngaysinh">Ngày sinh</string>
    <string name="gioitinh">Giới tính</string>
    <string name="nd2">Một chút thông tin về tôi</string>
    <string name="doimatkhau">Đổi mật khẩu</string>
    <string name="nhapmatkhaucu">Nhập mật khẩu cũ</string>
    <string name="nhapmatkhaumoi">Nhập mật khẩu mới</string>
    <string name="nhaplai">Nhập lại mật khẩu mới</string>
    <string name="luu">Lưu</string>
    <string name="thongtinkhac">Thông tin khác</string>
    <string name="trogiup">Trợ giúp</string>
    <string name="riengtu">Riêng tư</string>
    <string name="nd3">Dịch vụ và chính sách</string>
    <string name="dangxuat">Đăng xuất</string>
    <string name="gioitinh1">Giới tính :</string>
    <string name="nam">Nam</string>
    <string name="nu">Nữ</string>
    <string name="tenkhachhang">Tên khách hàng</string>
    <string name="phuongthucthanhtoan">Phương thức thánh toán</string>
    <string name="taikhoannganhang">Tài khoản ngân hàng</string>
    <string name="thongbao">Thông báo</string>
    <string name="danhdauladoc">Đánh dấu là đã đọc</string>
    <string name="noidungchuaco">Bạn chua có thông báo nào cả :3</string>
    <string name="tieude">Tiêu Đề</string>
    <string name="noidungthongbao">Nội dung</string>
    <string name="ngaythongbao">18/10/2021</string>
    <string name="danhsachsanpham">Danh sách sản phẩm</string>
    <string name="tensanpham">Tên sản phẩm</string>
    <string name="gia">Giá</string>
    <string name="noidungchuaco2">Chưa có báo cáo nào :3</string>
    <string name="m_i_ng_ph">Mời đóng phí</string>
    <string name="xuly">Xử lý</string>
    <string name="n_i_dung_t_c_o">Nội dung tố cáo</string>
    <string name="khoacuahang">Khóa cửa hàng</string>
    <string name="boqua">Bỏ qua</string>
    <string name="tocao">Tố cáo</string>
    <string name="id1">Id</string>
    <string name="bitocao">Bị tố cáo</string>
    <string name="noidungtocao">Nội dung tố cáo</string>
    <string name="khoashipper">Khóa shipper</string>
    <string name="trangthai1">Trạng thái :</string>
    <string name="danghoatdong">Đang hoạt động</string>
    <string name="tongtiendagiao">Tổng tiền đã giao :</string>
    <string name="donhanggiaothanhcong">Đơn hàng giao thành công :</string>
    <string name="donhanggiaokhongthanhcong">Đơn hàng giao không thành công :</string>
    <string name="donhangdanggiao">Đơn hàng đang đi giao :</string>
    <string name="chonngaybatdau">Chọn ngày bắt đầu</string>
    <string name="chonngayketthuc">Chọn ngày kết thúc</string>
    <string name="den">đến</string>
    <string name="tilegiaohang">Tỉ lệ giao hàng :</string>
    <string name="tongdonhang">Tổng đơn hàng :</string>
    <array name="noidungvipham">
        <item>Mời đóng phí</item>
        <item>Cửa hàng bị khóa 3 ngày</item>
        <item>Cửa hàng bị khóa 7 ngày</item>
        <item>Cửa hàng bị khóa vĩnh viễn</item>
    </array>
    <string name="title_activity_maps">Map</string>
    <string name="tao_su_kien">Tạo sự kiện</string>
</resources>