<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/image_loaisanpham"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:padding="5dp"
            android:scaleType="fitXY"
            android:src="@drawable/picturefrontpremium"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <LinearLayout
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/id"
                    android:textSize="20dp"
                    android:textColor="@color/black"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp" />

                <TextView
                    android:id="@+id/tv_soTT"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/so"
                    android:textSize="20dp"
                    android:textColor="@color/black" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ten"
                    android:textSize="16dp"
                    android:textColor="@color/black"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp" />
                <TextView
                    android:id="@+id/tv_tenLoai"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/a"
                    android:textSize="16dp"
                    android:textColor="@color/black" />

            </LinearLayout>



        </LinearLayout>

    </LinearLayout>
</LinearLayout>