<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/image_profile"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:padding="5dp"
            android:scaleType="centerCrop"
            android:src="@drawable/picturefrontpremium"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_hovaten"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/hovaten"
                    android:textSize="15dp"/>

                <TextView
                    android:id="@+id/tv_trangthai"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:text="@string/trangthai"
                    android:textSize="13dp"
                    android:textColor="#19EB3C"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_sdt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/sdt"
                    android:textSize="15dp"/>

                <TextView
                    android:id="@+id/tv_maxe"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:text="@string/maxe"
                    android:textSize="13dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/edt_noidungvipham"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/border_edit"
                    android:hint="Nội dung vi phạm"
                    android:textSize="13dp"/>

                <Button
                    android:id="@+id/btn_gui"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/gui"
                    android:textAllCaps="false"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>