<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginBottom="50dp">

            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/profile_image_admin"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:src="@drawable/boyfrontpremium"
                app:civ_border_color="@color/transparent"
                app:civ_border_width="0.5dp"
                 />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/border_linear_vuong"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:text="@string/thongtincanhan"
                    android:textColor="@color/black"
                    android:textSize="15dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_sua_admin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="0.1"
                    android:text="@string/sua"
                    android:textColor="#1C3FEC"
                    android:textSize="15dp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:src="@drawable/ic_person_admin" />

                    <TextView
                        android:id="@+id/tv_ten_admin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="10dp"
                        android:text="@string/tenadmin"
                        android:textColor="@color/black"
                        android:textSize="15dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:src="@drawable/ic_cake" />

                    <TextView
                        android:id="@+id/tv_ngaysinh_admin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="10dp"
                        android:text="@string/ngaysinh"
                        android:textColor="@color/black"
                        android:textSize="15dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:src="@drawable/ic_email" />

                    <TextView
                        android:id="@+id/tv_email_admin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="10dp"
                        android:text="@string/email"
                        android:textColor="@color/black"
                        android:textSize="15dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:src="@drawable/ic_phone" />

                    <TextView
                        android:id="@+id/tv_sdt_admin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="10dp"
                        android:text="@string/sdt"
                        android:textColor="@color/black"
                        android:textSize="15dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:src="@drawable/ic_error" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="10dp"
                        android:text="@string/nd2"
                        android:textColor="@color/black"
                        android:textSize="15dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/border_linear_vuong"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1"
                        android:text="@string/doimatkhau"
                        android:textColor="@color/black"
                        android:textSize="15dp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/edt_matkhaucu_admin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="20dp"
                        android:background="@drawable/border_edit_vuong2"
                        android:drawableLeft="@drawable/ic_lock_open"
                        android:drawablePadding="10dp"
                        android:hint="@string/nhapmatkhaucu"
                        android:textSize="14dp" />

                    <EditText
                        android:id="@+id/edt_matkhaumoi_admin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="7dp"
                        android:layout_marginEnd="20dp"
                        android:background="@drawable/border_edit_vuong2"
                        android:drawableLeft="@drawable/ic_lock_open"
                        android:drawablePadding="10dp"
                        android:hint="@string/nhapmatkhaumoi"
                        android:textSize="14dp" />

                    <EditText
                        android:id="@+id/edt_nhaplai_admin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="7dp"
                        android:layout_marginEnd="20dp"
                        android:drawablePadding="10dp"
                        android:background="@drawable/border_edit_vuong2"
                        android:drawableLeft="@drawable/ic_lock_open"
                        android:hint="@string/nhaplai"
                        android:textSize="14dp" />

                    <Button
                        android:id="@+id/btn_luu_admin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/luu"
                        android:textAllCaps="false"
                        android:textStyle="bold"
                        android:background="#13B733"
                        android:layout_marginStart="220dp"
                        android:layout_marginEnd="20dp"
                        android:textColor="@color/white"
                        android:layout_marginTop="20dp"
                        android:textSize="20dp"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/border_linear_vuong"
                    android:orientation="horizontal">

                    <TextView
                        android:textStyle="bold"
                        android:background="#7EBDBDBD"
                        android:textColor="@color/black"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/phuongthucthanhtoan"
                        android:textSize="15dp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_TaiKhoanNganHang_admin"
                        android:drawablePadding="10dp"
                        android:paddingLeft="20dp"
                        android:drawableLeft="@drawable/ic_credit_card"
                        android:textColor="@color/black"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/taikhoannganhang"
                        android:textSize="15dp"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/border_linear_vuong"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1"
                        android:text="@string/thongtinkhac"
                        android:textColor="@color/black"
                        android:textSize="15dp"
                        android:textStyle="bold"/>



                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_trogiup_admin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawablePadding="10dp"
                        android:paddingLeft="20dp"
                        android:drawableLeft="@drawable/ic_error"
                        android:text="@string/trogiup"
                        android:textColor="@color/black"
                        android:textSize="15dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_riengtu_admin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawablePadding="10dp"
                        android:paddingLeft="20dp"
                        android:drawableLeft="@drawable/ic_lock"
                        android:text="@string/riengtu"
                        android:textColor="@color/black"
                        android:textSize="15dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_dvvacs_admin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawablePadding="10dp"
                        android:paddingLeft="20dp"
                        android:drawableLeft="@drawable/ic_file"
                        android:text="@string/nd3"
                        android:textColor="@color/black"
                        android:textSize="15dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp">

                    <Button
                        android:id="@+id/btn_dangxuat_admin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/dangxuat"
                        android:textAllCaps="false"
                        android:textStyle="bold"
                        android:background="#F11B1B"
                        android:layout_marginStart="40dp"
                        android:layout_marginEnd="40dp"
                        android:textColor="@color/white"
                        android:layout_marginTop="20dp"
                        android:textSize="20dp"
                        />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>